<package>

  <name>squirrel_common</name>
  <version>0.0.24</version>
  <description>Definitions for mesages, services and actions. Startup packages for the robots</description>
  <maintainer email="krivic.senka@gmail.com">Senka Krivic</maintainer>
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <run_depend>squirrel_object_perception_msgs</run_depend>
  <run_depend>squirrel_planning_knowledge_msgs</run_depend>
  <run_depend>squirrel_prediction_msgs</run_depend>
  
  <export>
	<metapackage/>
  </export>

</package>
